--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,12 @@
 html,
 body,
 #map {
+    position: fixed;
+    top: 0;
+    left: 10%;//200px;
     display: block;
     width: 100%;
-    height: 90%; /* reset to 100 */
+    height: 100%;
 }
 
 #map {
@@ -13,9 +16,10 @@ body,
 #overlay {
   background: white;
   position: fixed;
-  width: 33.3333%;
+  width: 255px; /*33.3333%;*/
   height: 100%;
-  top: 0; left: 0;
+  top: 0; 
+  left: 0;
   overflow-x:hidden;
   overflow-y:auto;
   border-right: 1px solid rgba(0,0,0,0.25);
@@ -27,4 +31,18 @@ table, th, td {
     padding: 5px;
 }
 
+//////
 
+#builder-basic {
+  width: 500px;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-right: 150px;
+}
+
+#btn-get {
+  margin-top: 0;
+  margin-right: 150px;
+  float: right;
+  width: 70%;
+}
