--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,8 @@ table, th, td {
   width: 100%;
   height: 100%;
   opacity: .95;
+  padding: 0; 
+  margin: 0; 
 } 
 
 #close_stats {
@@ -103,3 +105,16 @@ table, th, td {
   outline: none;
   z-index: 10000000000000;
 }
+
+#stats div {
+  width: 50vw; 
+  height: 50vh; 
+  float: left; 
+}
+
+#div1 { background: #DDD; }
+#div2 { background: #AAA; }
+#div3 { background: #777; }
+#div4 { background: #444; }
+
+
