--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,55 @@
-html,
-body,
-#map {
-  position: fixed;
-  top: 0;
-  left: 10%;//200px;
-  display: block;
-  width: 100%;
-  height: 100%;
+body {
+  height: 100wh;
+  background: rgb(250, 240, 210);
+  overflow-y: hidden;
 }
 
 #map {
+  position: absolute;
+  top: 20vh;
+  display: block;
+  width: 80vw;
+  height: 80vh;
+  margin-left: 20vw;
   background: #58B;
 }
 
 #overlay {
   background: white;
-  position: fixed;
-  width: 255px; /*33.3333%;*/
-  height: 100%;
+  position: absolute;
+  width: 20vw;
+  height: 100vh;
   top: 0; 
   left: 0;
-  overflow-x:hidden;
-  overflow-y:auto;
+  overflow-x: hidden;
+  overflow-y: auto;
   border-right: 1px solid rgba(0,0,0,0.25);
+}
+
+@keyframes hover_list {
+    from {background-color: white;}
+    to {background-color: #aaa;}
+}
+
+@keyframes un_hover_list {
+    from {background-color: #aaa;}
+    to {background-color: white;}
+}
+
+.list-group-item {
+  border-radius: 0;
+  animation-name: un_hover_list;
+  animation-duration: 0.5s;
+}
+
+.list-group-item:hover {
+  background: #aaa;
+  animation-name: hover_list;
+  animation-duration: 0.5s;
+}
+
+.list-group-item:active {
+  background: #999;
 }
 
 table, th, td {
@@ -32,17 +59,23 @@ table, th, td {
 }
 
 #builder-basic {
-  width: 500px;
-  margin-top: 0;
-  margin-bottom: 0;
-  margin-right: 150px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: block;
+  width: 70vw;
+  height: 20vh;
+  margin-left: 30vw;
+  overflow-y: scroll;
+  z-index: 900;
+  margin-right: 1px;
 }
 
 #btn-get {
   z-index: 998;
   position: absolute;
-  bottom: 20px;
-  right: 290px;
+  bottom: 3vh;
+  right: 12vw;
   border-radius: 50%;
   width: 50px;
   height: 50px;
@@ -54,8 +87,8 @@ table, th, td {
 #reset_markers_location_button {
   z-index: 998;
   position: absolute;
-  bottom: 20px;
-  right: 220px;
+  bottom: 3vh;
+  right: 7vw;
   border-radius: 50%;
   width: 50px;
   height: 50px;
@@ -67,8 +100,8 @@ table, th, td {
 #stats_button {
   z-index: 999;
   position: absolute;
-  bottom: 20px;
-  right: 150px;
+  bottom: 3vh;
+  right: 2vw;
   border-radius: 50%;
   width: 50px;
   height: 50px;
@@ -116,5 +149,4 @@ table, th, td {
 #div2 { background: #AAA; }
 #div3 { background: #777; }
 #div4 { background: #444; }
-
 
