--- a/css/style.css
+++ b/css/style.css
@@ -159,3 +159,40 @@ table, th, td {
 #div3 { background: #777; }
 #div4 { background: #444; }
 
+.feedEkList {
+  width: 450px; 
+  list-style: none outside none;
+  background-color: #FFFFFF;
+  border: 1px solid #D3CAD7;
+  padding: 4px 6px;
+  color: #3E3E3E;
+}
+
+.feedEkList li {
+  border-bottom: 1px solid #D3CAD7;
+  padding: 5px;
+  text-align: left;
+}
+
+.feedEkList li:last-child {
+  border-bottom: none;
+}
+
+.itemTitle a {
+  font-weight: bold;
+  color: #4EBAFF !important;
+  text-decoration: none
+}
+
+.itemTitle a:hover {
+  text-decoration: underline
+}
+
+.itemDate {
+  font-size: 11px;
+  color: #AAAAAA;
+} 
+
+#divRss {
+  text-align: left;
+}
